[project]
name = "bug-bounty-agent"
version = "0.1.0"
description = "Autonomous bug bounty agent powered by Claude Code"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bba"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
